; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_eset.c_eset_remove_locked.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_eset.c_eset_remove_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32, i32, i32*, i32 }

@config_stats = common dso_local global i64 0, align 8
@eset_bitmap_info = common dso_local global i32 0, align 4
@LG_PAGE = common dso_local global i64 0, align 8
@ATOMIC_RELAXED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eset_remove_locked(i32* %0, %struct.TYPE_4__* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i32* %2, i32** %6, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 5
  %15 = call i32 @malloc_mutex_assert_owner(i32* %12, i32* %14)
  %16 = load i32*, i32** %6, align 8
  %17 = call i64 @extent_state_get(i32* %16)
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %17, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i32*, i32** %6, align 8
  %25 = call i64 @extent_size_get(i32* %24)
  store i64 %25, i64* %7, align 8
  %26 = load i64, i64* %7, align 8
  %27 = call i64 @sz_psz_quantize_floor(i64 %26)
  store i64 %27, i64* %8, align 8
  %28 = load i64, i64* %8, align 8
  %29 = call i64 @sz_psz2ind(i64 %28)
  store i64 %29, i64* %9, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 4
  %32 = load i32*, i32** %31, align 8
  %33 = load i64, i64* %9, align 8
  %34 = getelementptr inbounds i32, i32* %32, i64 %33
  %35 = load i32*, i32** %6, align 8
  %36 = call i32 @extent_heap_remove(i32* %34, i32* %35)
  %37 = load i64, i64* @config_stats, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %44

39:                                               ; preds = %3
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %41 = load i64, i64* %9, align 8
  %42 = load i64, i64* %7, align 8
  %43 = call i32 @eset_stats_sub(%struct.TYPE_4__* %40, i64 %41, i64 %42)
  br label %44

44:                                               ; preds = %39, %3
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 4
  %47 = load i32*, i32** %46, align 8
  %48 = load i64, i64* %9, align 8
  %49 = getelementptr inbounds i32, i32* %47, i64 %48
  %50 = call i64 @extent_heap_empty(i32* %49)
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %58

52:                                               ; preds = %44
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 3
  %55 = load i32, i32* %54, align 8
  %56 = load i64, i64* %9, align 8
  %57 = call i32 @bitmap_set(i32 %55, i32* @eset_bitmap_info, i64 %56)
  br label %58

58:                                               ; preds = %52, %44
  %59 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 2
  %61 = load i32*, i32** %6, align 8
  %62 = call i32 @extent_list_remove(i32* %60, i32* %61)
  %63 = load i64, i64* %7, align 8
  %64 = load i64, i64* @LG_PAGE, align 8
  %65 = lshr i64 %63, %64
  store i64 %65, i64* %10, align 8
  %66 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %67 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %66, i32 0, i32 1
  %68 = load i32, i32* @ATOMIC_RELAXED, align 4
  %69 = call i64 @atomic_load_zu(i32* %67, i32 %68)
  store i64 %69, i64* %11, align 8
  %70 = load i64, i64* %11, align 8
  %71 = load i64, i64* %10, align 8
  %72 = icmp uge i64 %70, %71
  %73 = zext i1 %72 to i32
  %74 = call i32 @assert(i32 %73)
  %75 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %76 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %75, i32 0, i32 1
  %77 = load i64, i64* %11, align 8
  %78 = load i64, i64* %7, align 8
  %79 = load i64, i64* @LG_PAGE, align 8
  %80 = lshr i64 %78, %79
  %81 = sub i64 %77, %80
  %82 = load i32, i32* @ATOMIC_RELAXED, align 4
  %83 = call i32 @atomic_store_zu(i32* %76, i64 %81, i32 %82)
  ret void
}

declare dso_local i32 @malloc_mutex_assert_owner(i32*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @extent_state_get(i32*) #1

declare dso_local i64 @extent_size_get(i32*) #1

declare dso_local i64 @sz_psz_quantize_floor(i64) #1

declare dso_local i64 @sz_psz2ind(i64) #1

declare dso_local i32 @extent_heap_remove(i32*, i32*) #1

declare dso_local i32 @eset_stats_sub(%struct.TYPE_4__*, i64, i64) #1

declare dso_local i64 @extent_heap_empty(i32*) #1

declare dso_local i32 @bitmap_set(i32, i32*, i64) #1

declare dso_local i32 @extent_list_remove(i32*, i32*) #1

declare dso_local i64 @atomic_load_zu(i32*, i32) #1

declare dso_local i32 @atomic_store_zu(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
